tests/architecture/fixtures/valid/seasonalweather/api/routes.py
from seasonalweather.services import WeatherService


async def status(service: WeatherService) -> dict[str, str]:
    return await service.status()
